# ghc-stm-benchmarks

./: .gitignore  LICENSE
benchmarks/List/: .gitignore  Main.hs  build.sh  plot.hs  test-edit-grow.sh  test-edit-large.sh  test-grow.sh  test.sh
benchmarks/ListC/: TList.hs  main.c
benchmarks/PPoPP2019/: build.sh  clean.sh  fig-1.sh  fig-2a.sh  fig-2bc.sh  mktopo.hs  plot-stats.hs  plot.hs  plotMulti.hs  topo-cores-sockets-threads-20  topo-cores-sockets-threads-24  topo-cores-sockets-threads-32  topo-cores-sockets-threads-34  topo-cores-sockets-threads-40  topo-cores-sockets-threads-48  topo-cores-sockets-threads-64
benchmarks/PPoPP2019/plot/: plot-stats.html.template  plot.html.template
benchmarks/PPoPP2019/src/: CuckooHash.hs  CuckooHashTStruct.hs  CuckooHashTStructInt.hs  CuckooHashTVar.hs  CuckooHashTVarSimple.hs  Hamt.hs  HamtTRef.hs  HamtTStruct.hs  Main.hs  Opts.hs  RBTree.hs  RBTreeTStruct.hs  RBTreeTVar.hs  TArray.hs  TStruct.hs  Throughput.hs  Treap.hs  TreapMut.hs  TreapMutSTM.hs  TreapTVar.hs
benchmarks/PPoPP2019/src/STMContainers/: Bimap.hs  Map.hs  Multimap.hs  Prelude.hs  Set.hs  SizedArray.hs  WordArray.hs
benchmarks/PPoPP2019/src/STMContainers/HAMT/: Level.hs  Nodes.hs
benchmarks/PPoPP2019/src/STMContainers/WordArray/: Indices.hs
benchmarks/PPoPP2019/src/System/Random/PCG/Fast/: Pure.hs
benchmarks/PPoPP2019/src/hashable-1.2.6.1/Data/Hashable/: Class.hs
benchmarks/PPoPP2019/src/loch-th-0.2.1/: LICENSE
benchmarks/PPoPP2019/src/loch-th-0.2.1/Debug/Trace/: LocationTH.hs
benchmarks/PPoPP2019/src/primitive-0.6.3.0/Control/Monad/: Primitive.hs
benchmarks/RBTree/: .gitignore  Main.hs  RBTree.hs  build.sh  clean.sh  test-mix-thread.sh  test-read-size.sh  test-read.sh  test-rstm-size.sh  test-rstm.sh  test-write-size.sh  test.sh
benchmarks/RBTree-Throughput/: CuckooHash.hs  CuckooHashInt.hs  CuckooHashTVar.hs  CuckooHashTVarSimple.hs  Main-32.hs  Main-HashMap.hs  Main-IORef.hs  Main-hle-bloom  Main-stm-containers.hs  Main.hs  Names.hs  ParseLog.hs  ParseTRec.hs  RBTree.hs  RBTreeCTrie.hs  RBTreeCuckoo.hs  RBTreeHashMap.hs  RBTreeIORef.hs  RBTreeMut.hs  RBTreeMutSTM.hs  RBTreeMutTVarColor.hs  RBTreeMutUSTM.hs  RBTreeNode-withNil.hs  RBTreeNode.hs  RBTreeSTMTrie.hs  RBTreeSkipList.hs  RBTreeTStruct-nonil.hs  RBTreeTStruct-withNil.hs  RBTreeTStruct.hs  RBTreeThroughput.cabal  RBTreeTreap.hs  RoundTest.hs  SkipList.hs  SkipListNode.hs  SkipListTStruct-debug.hs  SkipListTStruct.hs  SkipTest.hs  TStruct.hs  TestHAMT.hs  TreapIORef.hs  (+62 more)
benchmarks/RBTree-Throughput/figures/: fig.tex
benchmarks/RBTree-Throughput/html/: graph.js  index.html  style.css
benchmarks/RBTree-Throughput/primitive-0.6.2.0/Data/Primitive/: UnliftedArray.hs
benchmarks/RBTree-Throughput/stm-containers-TStruct/: stm-containers.cabal
benchmarks/RBTree-Throughput/stm-types/src/Control/Concurrent/: TM.hs
benchmarks/Treap/: TreapIORef.hs  TreapMutRead.hs  TreapNoRoot.hs  TreapNoRootInt.hs  TreapPoly.hs  TreapPure.hs  TreapPureCPS.hs  TreapPureRead.hs  TreapRead.hs  build.sh  test.sh  variants
benchmarks/acid-state/: LICENSE  Main.hs  acid-state-bench.cabal  build.sh  parseSize.hs  test-mix-size.sh  test-mix-thread.sh  test-mix.sh
benchmarks/acid-state/figures/: fig.tex
benchmarks/concurrent-linked-lists/SRC/: .gitignore  BackList2.lhs  CASList.hs  CASReadList.hs  CASusingSTMList.hs  Collection.hs  IOList.lhs  LazyList2.hs  MVarListLockCoupling.hs  MVarusingSTM.hs  Main.lhs  MainMVarList.lhs  RefInterface.hs  STMList.lhs  TestDataParser.hs  TestGeneratorSample.hs  TestGeneratorSample2.hs  TestRun.hs  build.sh  process.hs  process.sh  test.sh
benchmarks/data-structure-throughput/: build.sh  clean.sh  data-structure-throughput.cabal
benchmarks/data-structure-throughput/src/: ByteArray.hs  HAMTTStruct.hs  Hashable.hs  Indices.hs  Level.hs  Main.hs  Opts.hs  PCG.hs  RBTree.hs  RBTreeNode.hs  RBTreeTStruct.hs  STMTrie.hs
benchmarks/overhead/: build.sh  largeRead.hs  small.hs
benchmarks/random/pcg-random/src/System/Random/PCG/Fast/: Pure.hs
benchmarks/retry-herd/: Hash.hs  Herd.hs  Main.hs  Simple.hs  build.sh  clean.sh  parse.hs  plot.sh  run.sh  test-herd.sh  topo-cores-threads-sockets
benchmarks/retry-ring/: Main.hs  MainB.hs  build.sh  parse.hs  plot.sh  test-one.sh  test-thread.sh  test.sh
benchmarks/simple/: .gitignore  build.sh  simple.hs
benchmarks/stamp/: .gitignore  Main.hs  Parse.hs  TestRandom.hs  kmeans.hs  stamp.cabal
benchmarks/stamp/inputs/: simple.txt
benchmarks/stamp/kmeans/: KMeans.hs  Random.hs
benchmarks/stamp/vacation/: .gitignore  Client.hs  Customer.hs  Main.hs  Manager.hs  RBTree.hs  RBTreeNode.hs  RBTreeTStruct.hs  Random.hs  RandomMWC.hs  RandomPCG.hs  Reservation.hs  TList.hs  VectorRandom.hs  aborts.sh  build.sh  clean.sh  countUserTransactions.hs  emu.sh  parse.hs  parsePerfTime.hs  plot.sh  plotMulti.sh  test-heap.sh  test-low-heap.sh  test-low.sh  test.sh  vacation.cabal
benchmarks/throughput/: throughput.cabal
benchmarks/throughput/cbits/: gettime.c
benchmarks/throughput/src/: Throughput.hs
benchmarks/throughput/test/: test.hs
tests/Array/: RBTree.hs  RBTreeNode.hs  RBTreeUnpack.hs  TStruct.hs  build.sh  cmm-prim.hs  main.hs  minimal.hs  readWord.cmm  readWord.hs  size.hs  sizeDebug.hs  smallArray.hs  structTest.hs
tests/Array/cbits/: size.cmm
tests/mutable-fields/: array.hs  arraySTM.hs  buildDump.sh  fieldAccs.hs  init.hs  layout-mono-noref.hs  layout-mono.hs  record.hs  retrep.hs  stm.hs  testCompact.hs  unboxed.hs  wrap-mono.hs  write.hs
tests/mutable-fields/data-struct/: RBTree-IORef.hs  RBTree-box.hs  RBTree.hs  RBTreeMutSTM.hs  buildDump.sh  linkedlist.hs
tests/popcnt/: popcount.hs
util/perf-plot/: LICENSE  perf-plot.cabal
util/perf-plot/src/: Main.hs
util/perf-plot/src/Performance/Perf/: CmdLine.hs  Parse.hs  Plot.hs
util/runtracker/: LICENSE  dbtest.hs  mkdb.sql  runtracker.cabal
util/runtracker/src/: Main.hs
util/runtracker/src/RunTracker/: Database.hs  Git.hs  Parse.hs  Util.hs
