name:                runtracker
version:             0.1.0.0
synopsis:            Track performance statistics for benchmark runs.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ryan Yates
maintainer:          ryates@cs.rochester.edu
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable runtracker
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.6 && <4.7,
                       split >=0.2 && <0.3,
                       parsec >=3.1 && <3.2,
                       boxes >=0.1 && <0.2,
                       lens >=4.6 && <4.7,
                       time >=1.4 && <1.5,
                       sqlite-simple >=0.4 && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
