name:                runtracker
version:             0.1.0.0
synopsis:            Track performance statistics for benchmark runs.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ryan Yates
maintainer:          ryates@cs.rochester.edu
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
data-files:          mkdb.sql

executable runtracker
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.6 && <4.8,
                       boxes >=0.1 && <0.2,
                       data-default-class >= 0.0.1 && <0.1,
                       deepseq >= 1.3 && <1.4,
                       directory >= 1.2 && <1.3,
                       filepath >= 1.3 && <1.4,
                       lens >=4.6 && <4.7,
                       optparse-applicative >= 0.11 && <0.12,
                       parsec >=3.1 && <3.2,
                       process >= 1.2 && <1.3,
                       split >=0.2 && <0.3,
                       sqlite-simple >=0.4 && <0.5,
                       time >=1.4 && <1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
